# Ecosystem

./: .env.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHECKPOINTS.md  CLAUDE_NOTES.md  CODEX_INSTRUCTIONS.md  CONFIGURATION.md  DATA_MODELS.md  DEVELOPMENT.md  ERROR_HANDLING.md  MVP.md  PROJECT_DECISIONS.md  PROJECT_STATE.md  PROMPT_CONTRACTS.md  README.md  ROADMAP.md  SECURITY.md  TESTING.md  config.example.yaml  pyproject.toml
examples/: README.md  config.eval-scripted.yaml  config.local-llama.yaml  config.scripted.yaml  eval-corpus.yaml  eval-scripted.yaml  request.txt  scripted-basic.yaml
src/prompt_orchestrator/: __init__.py  __main__.py  cli.py  exceptions.py  redaction.py  rendering.py
src/prompt_orchestrator/clients/: __init__.py  base.py  diagnostic.py  factory.py  metering.py  mock.py  openai_compatible.py
src/prompt_orchestrator/config/: __init__.py  loader.py  models.py  validation.py
src/prompt_orchestrator/domain/: __init__.py  _base.py  enums.py  execution_plan.py  model_io.py  requests.py  results.py  trace.py  usage.py
src/prompt_orchestrator/evaluation/: __init__.py  (+7 more)
tests/: test_cli_commands.py  test_cli_eval.py  test_cli_lifecycle.py  test_clients.py  test_config.py  test_critic_revision_stages.py  test_domain_models.py  test_eval_arms.py  test_eval_stats.py  test_evaluation.py  test_examples.py  test_execution_plan_policy.py  test_live_smoke.py  test_metering_client.py  test_pipeline_runner.py  test_prompts_and_strategies.py  test_scaffold.py  test_structured_parsing.py  test_understanding_stage.py  test_worker_stage.py
(+46 files in other folders)
