[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "prompt-orchestrator"
version = "0.1.0"
description = "CLI-first prompt orchestration runtime."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
  { name = "Prompt Orchestrator Contributors" },
]
dependencies = [
  "httpx>=0.27,<1",
  "pydantic>=2.8,<3",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10,<2",
  "pytest-cov>=5,<7",
  "pytest>=8.2,<9",
  "ruff>=0.5,<1",
]

[project.scripts]
prompt-orchestrator = "prompt_orchestrator.cli:main"

[project.urls]
Repository = "https://example.invalid/prompt-orchestrator"
Specifications = "README.md"

[tool.hatch.build.targets.wheel]
packages = ["src/prompt_orchestrator"]

[tool.pytest.ini_options]
addopts = "-ra -m 'not live'"
testpaths = ["tests"]
markers = [
  "live: opt-in tests that require a configured OpenAI-compatible model endpoint",
]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
files = ["src", "tests"]
strict = true
warn_unreachable = true
pretty = true
